# agent-reasoning-beta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  app.py  docker-compose.yml  env.example  packages.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: api.md  architecture.md  configuration.md  development.md  education.md  models.md  testing.md  visualization.md
examples/: basic_reasoning.py
src/: __init__.py  app.py
src/config/: __init__.py  agent.py  model.py  system.py  visualization.py
src/core/: __init__.py  agents.py  metrics.py  models.py  reasoning.py  search.py  system.py  tools.py  types.py
src/ui/: Home.py  app.py
src/ui/pages/: 1_Playground.py  2_Analytics.py  3_Settings.py
src/ui/state/: session.py
src/utils/: config.py  helpers.py  logger.py
src/visualization/: __init__.py
src/visualization/components/: consensus_view.py  exploration_view.py  verification_view.py
src/visualization/components/shared/: graphs.py  heatmaps.py  metrics.py  trees.py
src/visualization/components/views/: consensus_view.py  exploration_view.py  verification_view.py
src/visualization/components/views/shared/: __init__.py  graphs.py  heatmaps.py  metrics.py  trees.py
src/visualization/layouts/: dashboard_layout.py  main_layout.py
tests/: conftest.py  test_analytics.py  test_core.py  test_ui.py  test_visualization.py
