[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-reasoning-beta"
version = "0.1.0"
description = "Multi-Agent Reasoning Visualization Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Codeium Engineering Team", email = "engineering@codeium.com" }
]
keywords = ["llm", "agents", "visualization", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.21.0",
    "backoff>=2.2.1",
    "aiohttp>=3.8.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "networkx>=3.2.1",
    "pyvis>=0.3.2",
    "pandas>=2.2.0",
    "tavily-python>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/codeium/agent-reasoning-beta"
Repository = "https://github.com/codeium/agent-reasoning-beta"
Documentation = "https://github.com/codeium/agent-reasoning-beta/docs"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
