[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-reasoning-beta"
version = "0.1.0"
description = "Multi-Agent Reasoning Beta - Visualizing and Understanding Agent Reasoning Processes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jarrod Barnes", email = "jbarnes850@gmail.com" }
]
keywords = ["llm", "agents", "visualization", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/jbarnes850/agent-reasoning-beta"
Repository = "https://github.com/jbarnes850/agent-reasoning-beta"
Documentation = "https://github.com/jbarnes850/agent-reasoning-beta/docs"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "networkx.*",
    "streamlit.*",
    "tavily.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
